<?xml version="1.0"?>
<package format="2">
  <name>raspicat_ros</name>
  <version>0.0.0</version>
  <description>The raspicat_ros meta package</description>

  <maintainer email="support@rt-net.jp">Tatsuhiro Ikebe</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>raspicat</exec_depend>
  <exec_depend>raspicat_description</exec_depend>
  <exec_depend>raspicat_documentation</exec_depend>
  <exec_depend>raspicat_navigation</exec_depend>
  <exec_depend>raspicat_navigation_msgs</exec_depend>
  <exec_depend>raspicat_perception</exec_depend>
  <exec_depend>raspicat_rosbag</exec_depend>
  <exec_depend>raspicat_setup_scripts</exec_depend>
  <exec_depend>raspicat_sim</exec_depend>
  <exec_depend>raspicat_slam</exec_depend>
  <exec_depend>raspicat_speak</exec_depend>
  <exec_depend>raspicat_switch_control</exec_depend>
  <exec_depend>raspimouse</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>